<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dominio.jc.androidsemana2.MainActivity">

    <TextView
        android:id="@+id/txtTitSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_text_size"
        android:text="@string/titFrmSignUp"
        android:textAlignment="center"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop = "@dimen/vertical_padding"
        android:paddingBottom="@dimen/vertical_padding"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop = "@dimen/vertical_padding"
        android:paddingBottom="@dimen/vertical_padding"
        android:layout_below="@+id/txtTitSignUp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblFullName"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/dpBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"

        android:layout_below="@+id/layFullName"
        />




    <android.support.design.widget.TextInputLayout
        android:id="@+id/layPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop = "@dimen/vertical_padding"
        android:paddingBottom="@dimen/vertical_padding"
        android:layout_below="@+id/dpBirthDate"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblPhoneNumber"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop = "@dimen/vertical_padding"
        android:paddingBottom="@dimen/vertical_padding"
        android:layout_below="@+id/layPhoneNumber"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblEmail"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop = "@dimen/vertical_padding"
        android:paddingBottom="@dimen/vertical_padding"
        android:layout_below="@+id/layEmail"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblDescription"
            android:minLines="1"
            android:lines="3"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/lblNext"
        android:layout_below="@+id/layDescription"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showConfirmation"
        />


</RelativeLayout>
